<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="@dimen/_20sdp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_1"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/sms" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@color/light_gray"
                    android:hint="@string/enter_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_color" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_2"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/lock" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:hint="@string/enter_password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_color" />

                <ImageView
                    android:id="@+id/password"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/eye_slash" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/inter_bold"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textFontWeight="700"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/inter_light"
                android:text="Don't Have Account"
                android:textColor="@color/black_light"
                android:textFontWeight="700"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="700"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@color/light_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/inter_light"
                android:text="@string/or"
                android:textColor="@color/black_light"
                android:textFontWeight="700"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/light_gray" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>